# dark-alpha-scraper-cli

./: README.md  pyproject.toml
src/darkAlphaScraper/: __main__.py  api.py  cli.py  config.py  contact_scraper.py  gemini_extractor.py  gui.py  helper.py  pagination.py  save_deals.py  scraper.py
